apps/perfdash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perfdash
  namespace: perfdash
  labels:
    app: perfdash
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: perf-dash-k8s-io-ingress-prod
    networking.gke.io/managed-certificates: perfdash-k8s-io
spec:
  defaultBackend:
    service:
      name: perfdash-status
      port:
        name: status
